Deployment_Strategy/CanaryStrategy/canary-combined-service.yml
apiVersion: v1
kind: Service
metadata:
  name: textutils-service
  namespace: canary-namespace
spec:
  selector:
    app: textutils
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
